css/style.css
html {
  font-size: 100%;
  -webkit-text-size-adjust: 100%;
      -ms-text-size-adjust: 100%;
}
body, p, a, h1, h2 {
	font-family: "nimbus-sans", 'Helvetica Neue', 'Arial', sans-serif;
	font-size: 16px;
}
body {
	background-color: #f4f4f4;
}
table {
  width: 100%;
  border-collapse: separate;
  border-spacing: 0px;
  background: transparent;
}
.container {
	width:100%;
	margin-left:auto;
	margin-right:auto;
	padding-top:100px;
}
#wrapper {
	width:850px;
	margin-left:auto;
	margin-right:auto;
	text-align:center;
	background-color:#333;
	padding:60px;
	border-radius:25px;
	-webkit-box-shadow: 0px 20px 20px 10px rgba(51, 51, 51, 0.4);
	box-shadow: 0px 20px 20px 10px rgba(51, 51, 51, 0.4);
}
#zoko {
	display:inline;
}
#overlay {
	width:850px;
	height:450px;
	z-index:1000;
	position:absolute;
	top:168px;
	-webkit-box-shadow: inset 0px 0px 15px 7px rgba(51, 51, 51, 0.3);
	box-shadow: inset 0px 0px 15px 7px rgba(51, 51, 51, 0.3);
}
#overlay p {
	color:#333;
	text-align:right;
	width:100%;
	display:block;
	height:20px;
	padding:0px;
	font-weight:bold;
	font-size:22px;
}
#steps {
	float:right;
	margin-top:10px;
	margin-right:15px;
}
#level {
	float:right;
	margin-top:360px;
	margin-right:15px;
}
#menuOverlay {
	width:850px;
	height:450px;
	z-index:2000;
	position:absolute;
	top:168px;
	background-color:#333;
	opacity: 0.8;
	margin-left:60px;
}
#menu {
	width:850px;
	height:450px;
	z-index:3000;
	position:absolute;
	top:168px;
	color:#fff;
	margin-left:60px;
}
#menu h2 {
	text-align:left;
	margin-top:0px;
	font-size:26px;
}
#menu .highscore {
	width:335px;
	float:right;
	padding:15px;
	padding-right: 60px;
	padding-top:60px;
}
#menu .highscore table {
	width:100%;
	border:2px solid #fff;
	border-radius:5px;
}
#menu .highscore table tr td {
	padding:8px;
	border-bottom:1px solid #fff;
	text-align: left;
	vertical-align: middle;
}
#menu .highscore table tr td:first-child {
	font-weight:bold;
	border-right:1px solid #fff;
}
#menu .highscore table tr.last td {
	border-bottom: none;
}
#menu .options {
	width:335px;
	float:left;
	padding:15px;
	padding-left: 60px;
	padding-top:60px;
}
#menu .options .btn {
	width:100%;
	height:40px;
	border:1px solid #fff;
	background: transparent;
	padding:10px;
	color:#fff;
	font-size:14px;
	border-radius: 7px;
	font-weight:bold;
	cursor:pointer;
	margin-bottom:10px;
}
#menu .options .btn:hover {
	background-color:#fff;
	color:#333;
}

#logo {
	padding-right: 0;
	padding-left: 0;
	margin-left: 20px;
	float: right;
	font-weight: bold;
	color: black;
	text-shadow: 0 1px 0 rgba(255, 255, 255, .1), 0 0 30px rgba(255, 255, 255, .125);
	-webkit-transition: all .2s linear;
	-moz-transition: all .2s linear;
	transition: all .2s linear;
	float:left;
	font-size:36px;
	margin:0px;
	margin-top:5px;
	cursor:default;
}

#logo:hover {
	text-decoration: none;
	text-shadow: 0 1px 0 rgba(255, 255, 255, .1), 0 0 30px rgba(255, 255, 255, .4);
	color:#fff;
	cursor:default;
}
#btn-group {
	width:500px;
	float:right;
}

.icon-btn {
  display: inline-block;
  padding: 9px 5px;
  margin-bottom: 0;
  font-size: 31px;
  line-height: 20px;
  color: #f4f4f4;
  text-align: center;
  vertical-align: middle;
  cursor: pointer;
  float:right;
  margin-top:10px;
  color: black;
  text-shadow: 0 1px 0 rgba(255, 255, 255, .1), 0 0 30px rgba(255, 255, 255, .125);
  -webkit-transition: all .2s linear;
  -moz-transition: all .2s linear;
  transition: all .2s linear;
  border:0px solid #333;
  font-weight:normal;
  margin-left:5px;
}
.icon-btn:hover {
	text-decoration: none;
	text-shadow: 0 1px 0 rgba(255, 255, 255, .1), 0 0 30px rgba(255, 255, 255, .4);
	color:#fff;
}

footer {
	width:970px;
	margin-left:auto;
	margin-right:auto;
	font-size:14px;
	margin-top:70px;
	text-align: center;
	padding-bottom:40px;
}
footer p {
	padding-top:30px;
}

.playerKeys, .restartLevelKey {
	width:165px;
	float:left;
}
.restartLevelKey {
	padding-left:20px;
}
.playerKeys p, .restartLevelKey p {
	margin:0px;
	padding:0px;
	color:#999;
	font-size:13px;
}
ol {
	list-style-type: none;
	padding:0px;
	margin:0px;
}
ol li {
	float: left;
	padding: 0px;
	margin: 0px;
}
.key {
	display: block;
	color: #aaa;
	text-decoration: none;
	text-align: center;
	width: 44px;
	height: 41px;
	margin: 5px;
	background: #eff0f2;
	-moz-border-radius: 4px;
	border-radius: 4px;
	border-top: 1px solid #f5f5f5;
	-webkit-box-shadow:
		inset 0 0 25px #e8e8e8,
		0 1px 0 #c3c3c3,
		0 2px 0 #c9c9c9,
		0 2px 3px #333;
	-moz-box-shadow:
		inset 0 0 25px #e8e8e8,
		0 1px 0 #c3c3c3,
		0 2px 0 #c9c9c9,
		0 2px 3px #333;
	box-shadow:
		inset 0 0 25px #e8e8e8,
		0 1px 0 #c3c3c3,
		0 2px 0 #c9c9c9,
		0 2px 3px #333;
	text-shadow: 0px 1px 0px #f5f5f5;
}

ol.arrow-keys {
	height:65px;
	width:165px;
	padding
}
#down {
	height: 23px;
}
#up, #left, #right {
	height: 24px;
}
#left, #right {
	margin: 30px 5px 5px;
}
#up {
	margin: 5px 5px 1px;
	border-bottom-right-radius: 0px;
	border-bottom-left-radius: 0px;
}
#down {
	margin: 0 5px 5px;
	border-top-left-radius: 0px;
	border-top-right-radius: 0px;
}
.restartLevelKey .key {
	display: block;
	text-transform: uppercase;
	margin-left: 59px;
	margin-bottom: 14px;
	margin-top: 10px;
	line-height: 41px;
}

p.footer {
	clear:both;
}

.instructions {
	width:350px;
	margin-left:auto;
	margin-right:auto;
}

